# data-model

./: LICENSE-CONTENT.md  LICENSE.md  README.md  config.py  pyproject.toml  requirements.txt
data/processed/: api_request_log.jsonl  housing_ols_ready.csv  housing_preprocessing_pipeline.pkl  housing_processed.csv
data/processed/model_registry/lightgbm_bundle/1.0.0/: manifest.json
data/processed/model_registry/logistic_pipeline/1.0.0/: manifest.json
data/raw/: housing.csv
models/: lightgbm_bundle.joblib  logistic_pipeline.joblib  mlp_checkpoint.pt
notebook/: 1-introduction.ipynb  10-cross-validation-pipelines.ipynb  11-classification-models.ipynb  12-regression-models-ml.ipynb  13-ensemble-methods.ipynb  14-performance-metrics.ipynb  15-model-validation-cross-validation.ipynb  16-hyperparameter-tuning.ipynb  17-model-interpretation-explainability.ipynb  3-data-preparation.ipynb  4-probability-distributions.ipynb  5-statistical-inference.ipynb  6-linear-regression.ipynb  7-generalized-linear-models.ipynb  8-foundations-machine-learning.ipynb  9-training-validation-bias-variance.ipynb
src/: data_ingestion.py  data_io.py
