[project]
name = "data-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "arch>=8.0.0",
    "fastapi>=0.136.0",
    "fredapi>=0.5.2",
    "imblearn>=0.0",
    "jupyterlab>=4.5.6",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "openpyxl>=3.1.5",
    "optuna>=4.8.0",
    "pandas>=2.3.3",
    "polars>=1.40.0",
    "pyarrow>=23.0.1",
    "pydantic>=2.13.2",
    "pywavelets>=1.8.0",
    "scikit-learn>=1.7.2",
    "scikit-optimize>=0.10.2",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "statsmodels>=0.14.6",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.26.0",
    "umap-learn>=0.5.12",
    "yfinance>=1.3.0",
]
